2005-11-16  Tim-Philipp Müller  <tim at centricular dot net>

	* NEWS:
	  Update
	  
	* src/base64.c:
	  Make table constant

2005-11-16  Tim-Philipp Müller  <tim at centricular dot net>

	* src/gnet-private.h:
	* src/inetaddr.c: (gnet_inetaddr_new_async),
	(inetaddr_new_async_cb):
	  Fix race condition in async DNS resolution code:
	  inetaddr_new_async_cb() might be called before
	  gnet_inetaddr_new_async() gets around to setting 
	  state->func and state->data (based on patch by
	  steve_morris@arcadyan.com).

2005-11-16  Tim-Philipp Müller  <tim at centricular dot net>

	* src/uri.c: (field_escape):
	  Fix URI escaping for characters from 0x80-0xff.

2005-11-15  Tim-Philipp Müller  <tim at centricular dot net>

	* NEWS:
	* configure.ac:
	* doc/gnet-sections.txt:
	* gnet.def:
	  Update for API addition.

2005-11-15  Jeff Garzik  <jgarzik@pobox.com>

	* src/conn.c: (conn_write_free), (gnet_conn_disconnect),
	(gnet_conn_write_direct), (gnet_conn_write), (conn_write_async_cb):
	* src/conn.h:
	  Add gnet_conn_write_direct(), to allow the caller to
	  control the write buffer.

2005-10-27  Tim-Philipp Müller  <tim at centricular dot net>

	* src/pack.h:
	* src/scheduler.h:
	  Add extern "C" bits for c++ compiler.

2005-09-19  Tim-Philipp Müller  <tim at centricular dot net>

	* configure.ac:
	* src/gnet-private.h:
	  Check if system provides socklen_t; if not
	  define it to be size_t or int as required.
	  
	* gnetconfig.h.win32:
	  Bump version numbers to 2.0.8

2005-09-19  Tim-Philipp Müller  <tim at centricular dot net>

	* examples/echoclient-unix.c:
	* examples/echoserver-unix.c:
	  Relicense these to LGPL as well (I missed Marks approval,
	  see below, same message).

	* NEWS:
	  update

2005-09-19  Tim-Philipp Müller  <tim at centricular dot net>

	* examples/dnslookup.c:
	* examples/echoclient-async.c:
	* examples/echoclient-gconn.c:
	* examples/echoclient-udp.c:
	* examples/echoclient.c:
	* examples/echoserver-async.c:
	* examples/echoserver-gserver.c: